Modify the look of the Register component; Add Cancel button.

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ body {
     text-align: center;
 }
 
+.register{
+    margin: auto;
+    width: 35%;
+}
+
 .footer{
     position: fixed;
     bottom: 0;
