--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 10px;
     font-family: sans-serif;
-    background-color: lightblue;
+    background-color: #feffba;
 }
 
 .login{
@@ -14,6 +14,11 @@ body {
 .register{
     margin: auto;
     width: 35%;
+    text-align: center;
+}
+
+.register-form{
+    text-align: left;
 }
 
 .footer{
@@ -22,15 +27,25 @@ body {
     text-align: center;
 }
 
+.header {
+}
+
 .mi-deleteButton {
     margin-top: 20%;
 }
 
 .headerLoginButton {
+    margin-top: 10%;
     margin-left: 30%;
 }
 
+.header-text {
+    font-family: "Lucida Console", Monaco, monospace;
+    color: #337ab7;
+}
+
 .headerRegisterButton {
+    margin-top: 10%;
     margin-left: 5%;
 }
 
