--- a/src/index.css
+++ b/src/index.css
@@ -27,21 +27,6 @@ body {
     text-align: center;
 }
 
-.headerLoginButton {
-    margin-top: 10%;
-    margin-left: 30%;
-}
-
-.header-text {
-    font-family: "Lucida Console", Monaco, monospace;
-    color: #337ab7;
-}
-
-.headerRegisterButton {
-    margin-top: 10%;
-    margin-left: 5%;
-}
-
 .meetingSetup {
     width: 700px;
 }
@@ -49,4 +34,24 @@ body {
 .mdt-dateTimePicker {
     margin-bottom: 10px;
 }
+/* comment */
+.forLoginAndRegister {
+    margin-right: 6%;
+}
 
+.header-text {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: large;
+    color: #337ab7;
+}
+
+.header-buttons {
+    margin-top: 3%;
+    text-align: right;
+}
+
+.header-logo-text {
+    margin-top: 3%;
+    padding-left: 4%;
+    text-align: left;
+}
