--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
     background-color: #feffba;
 }
 
+.modal-dialog {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) !important;
+}
+
 .login{
     margin: auto;
     width: 35%;
