Adding logged user dropdown button in header.

--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -2,6 +2,10 @@
     margin-right: 6%;
 }
 
+.dropdown {
+    margin-right: 6%;
+}
+
 .header-text {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: large;
